--- a/wp-content/themes/cmp/assets/styles/layouts/_grid.scss
+++ b/wp-content/themes/cmp/assets/styles/layouts/_grid.scss
@@ -93,3 +93,8 @@ body {
     display: none !important;
   }
 }
+
+.l-collapse {
+  @include grid-collapse;
+  @include grid-container;
+}
